--- a/EventManagementSystem/appsettings.json
+++ b/EventManagementSystem/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=eventMS;Integrated Security=True;TrustServerCertificate=True" }
 }
