--- a/EventManagementSystem/appsettings.json
+++ b/EventManagementSystem/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=eventMS;Integrated Security=True;TrustServerCertificate=True" }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-FETP6EU\\SQLEXPRESS;Initial Catalog=eventMS;Integrated Security=True;Trust Server Certificate=True"
+  },
+  "AllowedHosts": "*"
 }
